force-app/main/default/objects/AIWorkflowAction__c/AIWorkflowAction__c.object-meta.xml
<CustomObject>
    <description>Defines a reusable, configurable action, backed by a Flow or Apex class, that can be assigned to one or more AI Agents via AIAgentWorkflowAction__c. Represents a capability the AI can suggest to a user, who reviews and triggers it manually rather than the AI executing it autonomously.</description>
    <label>AI Workflow Action</label>
    <nameField>
        <displayFormat>AI Action - {000000}</displayFormat>
        <label>AI Workflow Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>⚡ AI Workflow Actions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>