force-app/main/default/objects/AIWorkflowAction__c/fields/ActionName__c.field-meta.xml
<CustomField>
    <fullName>ActionName__c</fullName>
    <description>The display name of this action, shown to the AI for tool selection and to the user as a suggested action.</description>
    <inlineHelpText>Give this action a clear, action-oriented name, such as &quot;Resend Document Request.&quot;</inlineHelpText>
    <label>Action Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>