force-app/main/default/objects/AIWorkflowAction__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>The fully qualified name of the Apex class to invoke, used when Action Type is Apex.</description>
    <inlineHelpText>Required if Action Type is Apex. The class must implement the AiWorkflowActionExecutor interface, this is checked automatically before the record can be saved.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>