force-app/main/default/objects/AIWorkflowAction__c/fields/ConfirmationMessage__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationMessage__c</fullName>
    <description>The message shown to the user when confirming this action, if Requires Confirmation is enabled.</description>
    <inlineHelpText>Write a short message explaining what will happen if the user confirms, such as &quot;This will resend the document request to the applicant&apos;s email on file.&quot;</inlineHelpText>
    <label>Confirmation Message</label>
    <type>TextArea</type>
</CustomField>