force-app/main/default/objects/AIWorkflowAction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Explains what this action does, shown to the AI when deciding whether to suggest it in response to a user&apos;s question.</description>
    <inlineHelpText>Write a clear explanation of what this action does and when it&apos;s appropriate to use. This is what the AI reads to decide whether to suggest it, be specific.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>