force-app/main/default/objects/AIWorkflowAction__c/fields/ExecutionType__c.field-meta.xml
<CustomField>
    <fullName>ExecutionType__c</fullName>
    <description>Indicates whether this action only retrieves information or makes a change.</description>
    <inlineHelpText>Read Only actions can generally run without confirmation. Write actions change data and should typically require confirmation.</inlineHelpText>
    <label>Execution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>