force-app/main/default/objects/AIWorkflowAction__c/fields/FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>FlowAPIName__c</fullName>
    <description>The API name of the Flow to run, used when Action Type is Flow.</description>
    <inlineHelpText>Required if Action Type is Flow. Enter the exact API name of the Flow to invoke.</inlineHelpText>
    <label>Flow API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>