force-app/main/default/objects/AIWorkflowAction__c/fields/InputSchema__c.field-meta.xml
<CustomField>
    <fullName>InputSchema__c</fullName>
    <description>A JSON schema describing the inputs this action expects, used both to inform the AI&apos;s tool call and to render a pre-filled confirmation form.</description>
    <inlineHelpText>Define the inputs this action needs in JSON schema format. Field names must match the Flow&apos;s input variable API names, or the Apex class&apos;s expected parameter keys, exactly - otherwise the action will fail when triggered.</inlineHelpText>
    <label>Input Schema</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>