force-app/main/default/objects/AIWorkflowAction__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this action is currently available to be assigned to agents.</description>
    <inlineHelpText>Turn this off to retire an action without deleting it or breaking existing junction records.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>