force-app/main/default/objects/AIWorkflowAction__c/fields/OutputDescription__c.field-meta.xml
<CustomField>
    <fullName>OutputDescription__c</fullName>
    <description>A plain-language description of what this action returns, so the AI knows how to interpret and present the result.</description>
    <inlineHelpText>Describe what this action produces or returns, so the AI can explain the outcome to the user clearly.</inlineHelpText>
    <label>Output Description</label>
    <type>TextArea</type>
</CustomField>