force-app/main/default/objects/AIWorkflowAction__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <description>The object this action operates on.</description>
    <inlineHelpText>Enter the API name of the object this action is relevant to, such as Opportunity.</inlineHelpText>
    <label>Target Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>