force-app/main/default/objects/AIWorkflowAction__c/validationRules/ApexClassRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ApexClassRequired</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(ActionType__c) = $Label.AI_Workflow_Action_Action_Type_Apex &amp;&amp; ISBLANK(ApexClassName__c)</errorConditionFormula>
    <errorDisplayField>ApexClassName__c</errorDisplayField>
    <errorMessage>Apex Class Name is required when Action Type is Apex.</errorMessage>
</ValidationRule>