force-app/main/default/objects/AIWorkflowAction__c/validationRules/ConfirmationMessageRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmationMessageRequired</fullName>
    <active>true</active>
    <errorConditionFormula>RequiresConfirmation__c = TRUE &amp;&amp; ISBLANK(ConfirmationMessage__c)</errorConditionFormula>
    <errorDisplayField>ConfirmationMessage__c</errorDisplayField>
    <errorMessage>Confirmation Message is required when Requires Confirmation is checked.</errorMessage>
</ValidationRule>