force-app/main/default/objects/AIWorkflowAction__c/validationRules/FlowAPINameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FlowAPINameRequired</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(ActionType__c) = $Label.AI_Workflow_Action_Action_Type_Flow &amp;&amp; ISBLANK(FlowAPIName__c)</errorConditionFormula>
    <errorDisplayField>FlowAPIName__c</errorDisplayField>
    <errorMessage>Flow API Name is required when Action Type is Flow.</errorMessage>
</ValidationRule>