force-app/main/default/objects/AIWorkflowAction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>ActionType__c</columns>
    <columns>ExecutionType__c</columns>
    <columns>TargetObject__c</columns>
    <columns>RequiresConfirmation__c</columns>
    <columns>FlowAPIName__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>